--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,9 +118,9 @@ tokio-tungstenite = "0.23"
 tower = { version = "0.5", features = ["util"] }
 
 # icp
-ic-cdk = "0.17"
+ic-cdk = "0.19.0-beta.3"
+ic-cdk-timers = "1.0.0-beta.1"
 candid = "0.10"
-ic-cdk-timers = "0.11"
 
 # tracing
 tracing = "0.1"
